--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -592,10 +592,10 @@ button.close > span, button.close {
   padding: 10px 24px;
   min-height: 40px;
   letter-spacing: 0.1px;
-
-  border: 0;
+  
+  border: none;
   background-image: none;
-  background-color: transparent;
+  background-color:  #00FFAF;
   color: %color:Primary%;
   text-shadow: none;
   box-shadow: none;
@@ -657,7 +657,7 @@ button.close > span, button.close {
 
 .anvil-role-elevated-button > .btn, .anvil-role-elevated-button.file-loader>label {
   color: %color:Primary%;
-  background-color: %color:Surface%;
+  background-color: %color:Surface%;border-radius: 5px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.15);
 }
 
