--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -104,8 +104,12 @@ body {
   line-height: 1.4286;
   color: %color:On Surface%;
   background-color: %color:Background%;
-  min-height: calc(100vh - 56px)
-}
+  min-height: calc(100vh - 56px);
+  max-width: 1440px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
 
 @media print {
   body {
