--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -1171,13 +1171,8 @@ div.plot-container.plotly svg.main-svg {
  border-radius: .5em;
 }
 
-/* expand and collapse testing 
+/* expandable testing */
 
-* { margin:0; padding:0; }
-body { font-family: sans-serif;} 
-#content { margin: 50px; } 
-a { text-decoration: none; }  
- */
 .expandable {
   background: #fff;
   overflow: hidden;
@@ -1194,4 +1189,40 @@ a { text-decoration: none; }
   padding-bottom: 1em;
   color: black;
 }
- 
+/* collapsible testing */
+
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active, .collapsible:hover {
+  background-color: #555;
+}
+
+.collapsible:after {
+  content: '\002B';
+  color: white;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
+
+.content2 {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  background-color: #f1f1f1;
+}
