--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -1207,14 +1207,13 @@ div.plot-container.plotly svg.main-svg {
   padding-bottom: 1em;
   color: black;
 }
-/* collapsible testing */
-
+/* collapsible testing 
+          <button class="collapsible">Show Filter</button>
 .collapsible {
   background-color: #777;
   color: white;
   cursor: pointer;
   padding: 3px 18px;
-  /*width: 25%;*/
   border: solid 1px;
   border-radius:25px;
   text-align: center;
@@ -1231,8 +1230,7 @@ div.plot-container.plotly svg.main-svg {
 }
 
 .collapsible:after {
-  /*content: '\002B';*/
-  content: '\142F';
+  content: '\002B';
   color: white;
   font-weight: bold;
   float: right;
@@ -1240,10 +1238,9 @@ div.plot-container.plotly svg.main-svg {
 }
 
 .active:after {
-  /*content: "\2212";*/
-  content: "\1431";
+  content: "\2212";
 }
-
+*/
 .filterpanel {
   padding: 0 18px;
   max-height: 0;
@@ -1251,3 +1248,36 @@ div.plot-container.plotly svg.main-svg {
   transition: max-height 0.2s ease-out;
   
 }
+
+.collapsible: {
+	border-style: solid;
+	border-width: 0.25em 0.25em 0 0;
+	content: '';
+	display: inline-block;
+	height: 1.0em;
+	left: 0.15em;
+	position: relative;
+	top: 0.15em;
+	transform: rotate(135deg);
+	vertical-align: top;
+	width: 1.0em;
+}
+
+.active, .collapsible:hover {
+  color: #555;
+}
+
+.active, .collapsible:after {
+	border-style: solid;
+	border-width: 0.25em 0.25em 0 0;
+	content: '';
+	display: inline-block;
+	height: 1.0em;
+	left: 0.15em;
+	position: relative;
+	top: 0.15em;
+	transform: rotate(-45deg);
+	vertical-align: top;
+	width: 1.0em;
+}
+
