--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -1284,3 +1284,49 @@ div.plot-container.plotly svg.main-svg {
   vertical-align: bottom;
 }
 
+.anvil-role-star-button {
+  --star-color:orange;
+  margin:1em auto;
+  font-size:1em;
+  position: relative;
+  display: block;
+  width: 0px;
+  height: 0px;
+  border-right: 1em solid transparent;
+  border-bottom: 0.7em solid var(--star-color);
+  border-left: 1em solid transparent;
+  transform: rotate(35deg);
+}
+
+.anvil-role-star-button:before {
+  border-bottom: 0.8em solid var(--star-color);
+  border-left: 0.3em solid transparent;
+  border-right: 0.3em solid transparent;
+  position: absolute;
+  height: 0;
+  width: 0;
+  top: -0.45em;
+  left: -0.65em;
+  display: block;
+  content:"";
+  transform: rotate(-35deg);
+}
+
+.anvil-role-star-button:after {
+  position: absolute;
+  display: block;
+  top: 0.03em;
+  left: -1.05em;
+  width: 0;
+  height: 0;
+  border-right: 1em solid transparent;
+  border-bottom: 0.7em solid var(--star-color);
+  border-left: 1em solid transparent;
+  transform: rotate(-70deg);
+  content:"";
+}
+
+.anvil-role-star-button.clicked {
+  background-color: orange;
+}
+
