--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -8,7 +8,7 @@
   margin-bottom: -10px;
 }
 html, structure {
-  max-width: 1440px;
+  /*max-width: 1440px;*/
   text-align: center;
   display: flex;
   justify-content: center;
@@ -422,8 +422,8 @@ color: %color:On Primary Container%;
 /* Components: App Bar */
 .app-bar {
   min-height: 56px;
-  padding: 0 16px 0px 72px;
-  max-width: 1440px;
+  padding: 0 10px 0px 10px;
+  /*max-width: 1440px;*/
   text-align: center;
   display: flex;
   justify-content: center;
