--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -647,7 +647,7 @@ button.close > span, button.close {
   color:%color:On Primary%;
   background-color: %color:On Primary Container%;
   background-image: none;
-  border: solid 1px %color:Outline%;
+  border: %color:On Primary%;
   /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.15);*/
 
 }
@@ -667,9 +667,10 @@ button.close > span, button.close {
 
 .anvil-role-outlined-button > .btn:focus, .anvil-role-outlined-button > .btn:active, 
 .anvil-role-outlined-button.file-loader>label:focus, .anvil-role-outlined-button.file-loader>label:active{
-  background-color: %color:On Primary%;
-  color: %color:Font%;
+  background-color: %color:Font%;
+  color: %color:On Primary%;
   box-shadow:none;
+  border: %color:On Primary%;
 }
 
 .anvil-role-filled-button > .btn, .btn-primary, .anvil-role-filled-button.file-loader>label {
@@ -695,9 +696,35 @@ button.close > span, button.close {
   background-color: %color:On Primary%;
   color: %color:Font%;
   box-shadow:none;
-  
+  border: %color:On Primary%;
 }
 
+.anvil-role-green-filled-button > .btn, .btn-primary, .anvil-role-green-filled-button.file-loader>label {
+  background-color: %color:Toggle%;
+  color: %color:On Primary%;
+  box-shadow:none;
+}
+
+.anvil-role-green-filled-button > .btn:hover, .btn-primary:hover, .anvil-role-green-filled-button.file-loader>label:hover {
+  /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.15);*/
+  /*background: linear-gradient(0deg, %color:Light Overlay 1%, %color:Light Overlay 1%), %color:Font%;*/
+  background-color: %color:Toggle%;
+  color: %color:On Primary%;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.15);
+}
+
+.anvil-role-green-filled-button > .btn:focus, .btn-primary:focus, .anvil-role-green-filled-button > .btn:active, 
+.btn-primary:active, .anvil-role-green-filled-button > .btn:active:hover, .btn-primary:active:hover,
+.anvil-role-green-filled-button.file-loader>label:focus, .anvil-role-green-filled-button.file-loader>label:active, 
+.anvil-role-green-filled-button.file-loader>label:active:focus
+{
+  /*background: linear-gradient(0deg, %color:Light Overlay 2%, %color:Light Overlay 2%), %color:Primary%;*/
+  background-color: %color:On Primary%;
+  color: %color:Font%;
+  box-shadow:none;
+  border: %color:On Primary%;
+}
+  
 .anvil-role-elevated-button > .btn, .anvil-role-elevated-button.file-loader>label {
   color: %color:Primary%;
   background-color: %color:Background%;border-radius: 7px;
